--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build && tsc --project tsconfig.build.json && rimraf lib/{hooks,utils} && rimraf *.tsbuildinfo",
+    "build": "vue-tsc --noEmit && vite build && tsc --project tsconfig.build.json && rimraf *.tsbuildinfo",
     "preview": "vite preview",
     "preinstall": "npx only-allow pnpm",
     "prepare": "husky install"
